src/styles/global.css
@import "tailwindcss";
@source "../../src/**/*.{astro,tsx,ts}";
@import "./fonts.css";

@custom-variant phone-landscape (@media (orientation: landscape) and (max-height: 500px));
@custom-variant tablet-landscape (@media (orientation: landscape) and (min-height: 501px) and (max-width: 1024px));
@custom-variant phone-portrait (@media (orientation: portrait) and (max-width: 767px));
@custom-variant short-screen-portrait (@media (orientation: portrait) and (max-height: 668px));
@custom-variant short-screen-landscape (@media (orientation: landscape) and (max-height: 375px));
@custom-variant tablet (@media (min-width: 768px) and (min-height: 501px) and (max-width: 1180px));

@keyframes slide-in-right {
  from {
    transform: translateX(100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

.animate-slide-in-right {
  animation: slide-in-right 0.3s ease-out;
}

@layer base {
  html {
    scroll-padding-top: 100px; /* Height of the fixed header */
  }

  a {
    @apply p-1 hover:opacity-80 transition-opacity cursor-pointer;
  }
}

